--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -14,16 +14,15 @@
   ~ limitations under the License.
   -->
 
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/lagre_favoritter">
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
             app:key="poststedswitch"
             app:title="Poststed" />
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
             app:key="arstallswitch"
             app:title="Årstall" />
 
@@ -35,7 +34,7 @@
             app:key="malformswitch"
             app:title="Velg Målform"
             app:summaryOff="Bokmål"
-            app:summaryOn="Nynorsk"/>
+            app:summaryOn="Nynorsk" />
 
     </PreferenceCategory>
 
